# Git_VCS

./: .gitignore  CMakeLists.txt  COMMANDS.md  README.md  benchmark_results.txt  guide.md  visualize.py
.cache/clangd/index/: AddCommand.cpp.A272996BAA0F19D3.idx  AddCommand.h.744AF3F26BD2B4F0.idx  Blob.cpp.DE054FDC0EE104A6.idx  Blob.h.F7477CB90CE007A6.idx  CatFileCommand.cpp.37668D24707E346B.idx  CatFileCommand.h.6B382DE5F552E72C.idx  Chunker.cpp.1B3D061AA071AFD9.idx  Chunker.h.B56211CE568BB5C3.idx  Command.h.7DA4E88CB1A5A726.idx  Commit.cpp.6FD02CFE82BF96A7.idx  Commit.h.29B2A00D8365D268.idx  CommitCommand.cpp.E22B0FF5AD8F7453.idx  CommitCommand.h.971D8BDC59C0A9AC.idx  Diff.cpp.02BCC3F7291154C5.idx  Diff.h.FFC30980EF21B2E6.idx  DiffCommand.cpp.2A337F8C4586EC77.idx  DiffCommand.h.290AB43020784F6D.idx  GcCommand.cpp.5E2F19D13CAFBECF.idx  GcCommand.h.B4182339DD10059B.idx  GitObject.cpp.B02C969BE2A1FFE2.idx  GitObject.h.0BEAAEDF26489041.idx  Index.cpp.D218D64E02E2E5EC.idx  Index.h.78F4F4C2B564F3B3.idx  InitCommand.cpp.995C4217A1BC7518.idx  InitCommand.h.84FE595F73B31838.idx  LogCommand.cpp.5D9EB046884C3B81.idx  LogCommand.h.B726DCB1B1FB1E40.idx  (+11 more)
scripts/: visualize.py
src/: main.cpp
src/cli/: AddCommand.cpp  AddCommand.h  AddCommand.hpp  BranchCommand.cpp  BranchCommand.hpp  CatFileCommand.cpp  CatFileCommand.h  CatFileCommand.hpp  CheckoutCommand.cpp  CheckoutCommand.hpp  Command.h  CommitCommand.cpp  CommitCommand.h  CommitCommand.hpp  DeleteCommand.cpp  DeleteCommand.hpp  DiffCommand.cpp  DiffCommand.h  DiffCommand.hpp  GcCommand.cpp  GcCommand.h  GcCommand.hpp  InitCommand.cpp  InitCommand.h  InitCommand.hpp  LogCommand.cpp  LogCommand.h  LogCommand.hpp  MergeCommand.cpp  MergeCommand.hpp  RestoreCommand.cpp  RestoreCommand.hpp  StatusCommand.cpp  StatusCommand.h  StatusCommand.hpp  SwitchCommand.cpp  SwitchCommand.hpp
src/core/: Blob.cpp  Blob.h  Blob.hpp  Chunker.cpp  Chunker.h  Commit.cpp  Commit.h  Commit.hpp  Diff.cpp  Diff.hpp  GitObject.cpp  GitObject.h  GitObject.hpp  Index.cpp  Index.h  Index.hpp  Repository.cpp  Repository.h  Repository.hpp  Tree.cpp  Tree.h  Tree.hpp  Utils.cpp  Utils.h  Utils.hpp
tests/: benchmark.cpp  test_basic.cpp
